<?xml version="1.0" encoding="utf-8"?>
<!--
 * 长大长新-长江大学校园安卓应用
 *
 * Copyright (C) 2014-2016 Rex Lee <duguying2008@gmail.com>
 *
 * This program is free and opensource software; 
 * you can redistribute it and/or modify
 * it under the terms of the MIT License

-->
<resources>

    <!-- 默认 版本 -->
    <string name="app_name">长大长新</string>
    <string name="yangtzeu">长大长新</string>
    <string name="home">主页</string>
    <string name="jwc">教务处</string>
    <string name="library">图书馆</string>
    <string name="notice">通知通告</string>
    <string name="news">新闻</string>
    <string name="setting">设置</string>
    <string name="hello_world">世界，你好！</string>
    <string name="fenshu">分数查询</string>
    <string name="xuesheng">学生查询</string>
    <string name="xuanke">选课</string>
    <string name="kebiao">课表</string>
    <string name="cet">四六级</string>
    <string name="save">保存</string>
    <string name="student_number">学号</string>
    <string name="jwc_mima">教务处密码</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dialog_drop_list">DialogDropList</string>
    <string name="title_activity_jwc_chafen">JwcChafen</string>
    <string name="welcome_about_project1">(OpenSource)长大长新</string>
    <string name="welcome_about_project2">github:duguying/yangtzeu-app\nopensource project, code donation is welcome</string>
    <string name="title_activity_score_list">ScoreList</string>
    <string name="title_cet_score">CET Score</string>

</resources>