<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
    android:orientation="vertical"
    tools:context=".Setting" >

    <LinearLayout
        android:id="@+id/setting_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/yuol_main_title"
        android:gravity="top"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_setting"
            android:gravity="bottom"
            android:padding="3dp" >
        </LinearLayout>

        <!-- 设置 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/setting"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right|center"
            android:orientation="horizontal" >

            <!-- 保存按钮 -->

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/yuol_title_btn_bg"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:background="#a7bfdd"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="0dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 学号 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/student_number"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/student_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10" >
            </EditText>
            <!-- 教务处密码 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/jwc_mima"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jwc_mima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
            <!-- 借书证号码 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="借书证号码"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jsz_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
            <!-- 借书证密码 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="图书馆密码"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jsz_mima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>