<?xml version="1.0" encoding="utf-8"?>
<!--
 * 长大长新-长江大学校园安卓应用
 *
 * Copyright (C) 2014-2016 Rex Lee <duguying2008@gmail.com>
 *
 * This program is free and opensource software; 
 * you can redistribute it and/or modify
 * it under the terms of the MIT License
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".JwcRegex" >

    <LinearLayout
        android:id="@+id/jwc_title"
        android:layout_width="fill_parent"
        android:layout_height="52sp"
        android:layout_weight="1"
        android:background="@drawable/yangtzeu_main_title"
        android:gravity="top"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="52sp"
            android:layout_height="52sp"
            android:background="@drawable/main_jwc"
            android:gravity="bottom" >
        </LinearLayout>
        <!-- 教务处 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/jwc"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:background="#a7bfdd"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="0dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="0dp" >

            <!-- 分数查询 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:gravity="bottom|center_horizontal"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/jwc_chafen"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="3sp"
                    android:layout_marginLeft="8sp"
                    android:layout_marginRight="4sp"
                    android:layout_marginTop="9sp"
                    android:background="#FFFFFF" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/main_jwc" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/fenshu"
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- CET查分 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:gravity="bottom|center_horizontal"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/find_stu"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="3sp"
                    android:layout_marginLeft="4sp"
                    android:layout_marginRight="8sp"
                    android:layout_marginTop="9sp"
                    android:background="#FFFFFF" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/main_library" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/cet"
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="0dp" >

            <!-- 选课 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/kebiao_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="6sp"
                    android:layout_marginLeft="8sp"
                    android:layout_marginRight="4sp"
                    android:layout_marginTop="6sp"
                    android:background="#FFFFFF" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/main_notice" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/xuanke"
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- 课表 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/ch_cls"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="6sp"
                    android:layout_marginLeft="4sp"
                    android:layout_marginRight="8sp"
                    android:layout_marginTop="6sp"
                    android:background="#FFFFFF" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/main_news" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/kebiao"
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="0dp" >

            <!-- 学生查询 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/cet_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="9sp"
                    android:layout_marginLeft="8sp"
                    android:layout_marginRight="4sp"
                    android:layout_marginTop="3sp"
                    android:background="#FFFFFF" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/main_setting" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:text="@string/xuesheng"
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="0dp" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>